Various small style tweaks